# autodeploy

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  global.toml
src/: main.rs
src/objects/: structs.rs
src/utils/: docker.rs  docker_utils.rs  file.rs  git.rs  git_utils.rs  mod.rs
