[package]
name = "autodeploy"
version = "0.2.3"
edition = "2021"
authors = ["Kalyan Mudumby"]
description = "Configurable custom wrapper over git for quick and hassle free deployments"
repository = "https://github.com/theinhumaneme/autodeploy"
rust-version = "1.80.0"
readme = "README.md"

[dependencies]
clap = "4.5.10"
dotenv = "0.15.0"
git2 = { version = "0.19.0", features = [
    "vendored-libgit2",
    "vendored-openssl",
] }
inquire = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
text-to-ascii-art = "0.1.10"
toml = "0.8.15"

[profile.dev]
lto = false
opt-level = 0

[profile.release]
lto = true
opt-level = 3
