[package]
name = "autodeploy"
version = "1.2.3"
edition = "2024"
authors = ["Kalyan Mudumby"]
description = "Configurable custom wrapper over git for quick and hassle free deployments"
repository = "https://github.com/theinhumaneme/autodeploy"
rust-version = "1.85.0"
readme = "README.md"

[dependencies]
dotenvy = "0.15.7"
git2 = { version = "0.20.1", features = [
    "vendored-libgit2",
    "vendored-openssl",
] }
inquire = "0.7.5"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
text-to-ascii-art = "0.1.10"
toml = "0.8.20"
[profile.dev]
lto = false
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
